--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=ufc
 
+# Debug mode
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+logging.level.com.example.ufc=DEBUG
+
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/ufcdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
