feat: Phase 1 - Security & Configuration Hardening ✅ Externalized all sensitive configuration to environment variables ✅ Created environment-specific property files (dev/prod/test) ✅ Configured HikariCP connection pooling for optimal performance ✅ Enhanced security headers for production deployment ✅ Updated .gitignore to protect secrets and credentials ✅ Added comprehensive documentation and guides ✅ Removed all hardcoded credentials from repository BREAKING CHANGE: Environment variables now required: - DB_USERNAME - DB_PASSWORD - JWT_SECRET - SPRING_PROFILES_ACTIVE See QUICK_START.md for setup instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -62,9 +62,18 @@ bin/
 .DS_Store
 Thumbs.db
 
-# Application specific
+# Application specific - Environment Variables
+.env
+.env.local
+.env.*.local
 application-local.properties
-application-dev.properties
+
+# Test Scripts (Local Only - contain credentials)
+test-phase1.cmd
+start-app.cmd
+check-mysql.cmd
+find-mysql-password.cmd
+TESTING_CHECKLIST.md
 
 # H2 Database
 *.db
@@ -73,4 +82,12 @@ application-dev.properties
 # Logs
 logs/
 *.log
+
+# Sensitive Configuration (NEVER commit these!)
+*-prod.properties.local
+secrets/
+*.key
+*.pem
+*.p12
+*.jks
 
