chore: Remove internal documentation from repository - Remove development-specific .md files from version control - Keep only public-facing documentation (README, guides) - Update .gitignore to exclude internal dev docs - Maintain local copies for development reference

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,19 @@ check-mysql.cmd
 find-mysql-password.cmd
 TESTING_CHECKLIST.md
 
+# Internal Development Documentation (Keep Local Only)
+ADMIN_PANEL_TESTING_GUIDE.md
+ADMIN_PANEL_IMPROVEMENTS.md
+CODE_REVIEW_AND_ROADMAP.md
+COMMENTING_SYSTEM_IMPLEMENTATION.md
+FIXES_APPLIED_SUMMARY.md
+HELP.md
+IMPROVEMENTS.md
+PHASE1_COMPLETION_SUMMARY.md
+PRODUCTION_READINESS_ROADMAP.md
+SECURITY_AUDIT.md
+USER_PROFILE_IMPLEMENTATION.md
+
 # H2 Database
 *.db
 *.trace.db
